working on load balancer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.5'
 services:
   loadbalancer:
     image: traefik
-    command: --web --docker
+    command: --docker --docker.watch  --docker.domain=recipe.com
     ports:
       - 80:80
       - 443:443
@@ -16,6 +16,7 @@ services:
       - traefik.frontend.rule=Host:traefik.recipe.com
       - "traefik.enable=true"
       - "traefik.port=8080"
+      - traefik.backend.loadbalancer.method=wrr
     deploy:
       restart_policy:
         condition: any
@@ -31,8 +32,12 @@ services:
         - traefik.frontend.rule=Host:traefik.recipe.com
         - "traefik.enable=true"
         - "traefik.port=8080"
-    networks:
-      - traefik-net
+        - "traefik.frontend.entryPoints=http"
+    # networks:
+    #   - traefik-net
+    depends_on:
+      - recipe-api
+      - recipe-web
     # secrets:
     #     - bladehq.com.crt
     #     - bladehq.com.key
@@ -56,12 +61,15 @@ services:
         condition: on-failure
     labels:
       - traefik.backend=recipe-api
-      - traefik.docker.network=traefik-net
+      # - traefik.docker.network=traefik-net
+      # - traefik.docker.network=recipe_mysql
+      - traefik.docker.network=bridge
       - traefik.enable=true
       - traefik.frontend.rule=Host:api.recipe.com
       - traefik.frontend.priority=1
       - traefik.port=80
       - "traefik.frontend.entryPoints=http"
+      - traefik.backend.loadbalancer.method=wrr
       # - "traefik.backend.loadbalancer.stickiness=true"
       # - "traefik.backend.loadbalancer.stickiness.cookieName=_blaze"
     volumes:
@@ -79,7 +87,7 @@ services:
       DB_NAME_FILE: /run/secrets/mysql_name
     networks:
       - mysql
-      - traefik-net
+      # - traefik-net
     depends_on:
       - mysql
     secrets:
@@ -100,7 +108,9 @@ services:
         condition: on-failure
     labels:
       - traefik.backend=recipe-web
-      - traefik.docker.network=traefik-net
+      # - traefik.docker.network=traefik-net
+      # - traefik.docker.network=recipe_mysql
+      - traefik.docker.network=bridge
       - traefik.enable=true
       - traefik.frontend.rule=Host:recipe.com,www.recipe.com
       - traefik.frontend.priority=1
@@ -123,7 +133,7 @@ services:
       DB_NAME_FILE: /run/secrets/mysql_name
     networks:
       - mysql
-      - traefik-net
+      # - traefik-net
     depends_on:
       - mysql
     secrets:
@@ -131,41 +141,11 @@ services:
       - mysql_name
       - mysql_user
       - mysql_password
-  # recipe-web:
-  #   image: jlwarren1/recipe-web
-  #   build: 
-  #     context: .
-  #     dockerfile: ./web/Dockerfile
-  #   deploy:
-  #     replicas: 1
-  #     update_config:
-  #       parallelism: 2
-  #       delay: 10s
-  #     restart_policy:
-  #       condition: on-failure
-  #   volumes:
-  #     - ./templates:/templates
-  #     - ./static:/static
-  #   ports:
-  #     - 80:80
-  #     - 443:443
-  #   environment:
-  #     DB_HOST: mysql:3306
-  #     DB_PASS_FILE: /run/secrets/mysql_password
-  #     DB_USER_FILE: /run/secrets/mysql_user
-  #     DB_NAME_FILE: /run/secrets/mysql_name
-  #   networks:
-  #     - mysql
-  #   depends_on:
-  #     - mysql
-  #   secrets:
-  #     - mysql_root_password
-  #     - mysql_name
-  #     - mysql_user
-  #     - mysql_password
   mysql:
     image: mariadb:10.3
     restart: always
+    labels:
+      - traefik.enable=false
     ports:
       - '3306:3306'
     networks:
@@ -195,5 +175,5 @@ secrets:
 networks:
   mysql:
     driver: bridge
-  traefik-net:
-    driver: bridge
+  # traefik-net:
+  #   driver: bridge
